fix wrapping on 'graphic content' explainer as it was spilling out in FF & Safari (turns out `text-wrap` is an experimental property accepted only by chrome 🤦‍)

--- a/kahuna/public/stylesheets/main.css
+++ b/kahuna/public/stylesheets/main.css
@@ -1576,7 +1576,8 @@ textarea.ng-invalid {
   color: black;
   padding: 5px;
   border-radius: 3px;
-  text-wrap: initial;
+  word-break: normal;
+  white-space: normal;
 }
 .graphic-image-blur-explainer__tooltip a {
   color: black;
